# Pluribus

./: .gitignore  CMakeLists.txt  LICENSE  PluribusConfig.h.in  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  calculations.cpp  calculations.h  card_deck.cpp  card_deck.h  cfr.cpp  game.cpp  game.h  holdem.cpp  holdem.h  kuhn_poker.cpp  kuhn_poker.h  lcfr.cpp  mccfr.cpp  tree.h
tests/: CMakeLists.txt  calculation_tests.cpp  card_deck_tests.cpp  cfr_tests.cpp  do_tests.cpp  hand_test_helper.cpp  hand_test_helper.h  history_tests.cpp  holdem_tests.cpp  lcfr_tests.cpp  mccfr_tests.cpp  optimal_strategies_tests.cpp  optimal_strategies_tests.h  tests.cpp  tests.h  tree_tests.cpp
