add_executable(do_tests do_tests.cpp calculation_tests.cpp card_deck_tests.cpp holdem_tests.cpp tests.cpp tests.h mccfr_tests.cpp)
add_executable(do_mccfr_tests do_tests.cpp mccfr_tests.cpp tests.cpp tests.h)
add_executable(do_holdem_tests do_tests.cpp calculation_tests.cpp card_deck_tests.cpp holdem_tests.cpp tests.cpp tests.h)
target_link_libraries(do_tests PUBLIC source gtest)
target_link_libraries(do_mccfr_tests PUBLIC source gtest)
target_link_libraries(do_holdem_tests PUBLIC source gtest)
